--- a/멜론클론/css/main.css
+++ b/멜론클론/css/main.css
@@ -1,27 +1,46 @@
 
 body {
     font-family: 'Noto Sans KR', sans-serif;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 1008px; */
 }
 
+/* header */
 
 .header1{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 100px;
     background-color: #FFFFFF;
     height: 38px;
     font-size: 13px;
+    width: 1008px;
 }
 
-a {
+a:link {
     text-decoration: none;
-    color: #666
+    color: #666;
 }
+
+a:visited {
+    text-decoration: none;
+    color: #666;
+}
+
+
 
 .header1_left {
     text-align: left;
-    padding-left: 30px;
+    padding-left: 20px;
+}
+
+.header1_left a:hover{
+    transition: .1s;
+    color: #00d344;
+    text-decoration: none;
 
 }
 
@@ -29,11 +48,17 @@ a {
     text-align: right;
     display: flex;
     font-weight: 600;
-    position: relative;
 }
 
 .header1_right li {
     padding: 0 20px;
+}
+
+.header1_right a:hover{
+    transition: .1s;
+    color: black;
+    text-decoration: none;
+
 }
 
 .header1_border {
@@ -41,27 +66,118 @@ a {
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    
 }
 
 .header2 {
-    padding-bottom: 30px;
+    padding-bottom: 40px;
+    width: 1008px;
+    height: 50px;
+    justify-content: space-between;
+    overflow: hidden;
+    position: relative;
 }
 
-h1 {
-    padding-left: 125px;
+.header2_left1 > img {
+    width: 140px;
+    height: 45px;
+    cursor: pointer;
+    padding-left: 16px;
     padding-top: 30px;
+    text-align: left;
+    float: left;
     
 }
+
+
+.header2 .header2_left2 {
+    
+    display: flex;
+    position: relative;
+    left: 20px;
+    padding-top: 32px;
+}
+
+.header2 .header2_left2 input {
+    border-radius: 100px;
+    position: absolute;
+    width: 295px;
+    height: 25px;
+    border: 2px solid #00d344;
+    padding: 5px 10px;
+}
+
+.header2 .header2_left2 .material-icons {
+    color: #00d344;
+    position: absolute;
+    left: 285px;
+    padding-top: 8px;
+}
+
+.header2_right1 > img {
+    width: 42px;
+    cursor: pointer;
+    padding-left: 355px;
+    padding-top: 10px;
+}
+
+.header2_right2 {
+    display: inline-block;
+    width: 160px;
+    height: 20px;
+    float: right;
+    align-items: center;
+    margin-right: 275px;
+    margin: -20px 275px;
+    cursor: pointer;
+    border: 1px solid #666;
+    box-sizing: border-box;
+    
+}
+
+.header2_right2:hover {
+    display: none;
+}
+
+.chart {
+    display: none;
+    width: 160px;
+    height: 80px;
+    margin-right: 275px;
+    margin: -20px 275px;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.header2_right2:hover > .chart ul li{
+    position: absolute;
+    display: block;
+}
+
+
+/* 슬라이드 차트에 마우스 갖다대면 슬라이드 차트 사라지고 급상승 1위부터 10위까지 보이는(chart) 표 보이게 하기 */
+
+/* 이벤트배너 만들기 */
+.header2_right3 {
+    width: 275px;
+    height: 75px;
+    float: right;
+    margin-top: -50px;
+    background: lightpink;
+}
+
+
 
 .header3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 115px;
+    padding: 0 5px;
     background-color: #FFFFFF;
     height: 38px;
     font-size: 15px;
     padding-bottom: 10px;
+
 }
 
 .header3_left{
@@ -76,10 +192,23 @@ h1 {
     padding: 0 15px;
 }
 
+.header3_left a:hover{
+    transition: .1s;
+    color: #00d344;
+    text-decoration: none;
+
+}
+
 .header3_right{
     color: #666;
     font-weight: 600;
-    
+    padding-right: 15px;
+    cursor: pointer;
+}
+
+.header3_right:hover {
+    transition: .1s;
+    color: #00d344;
 }
 
 .header3_border {
@@ -87,4 +216,13 @@ h1 {
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+
+/* main */
+
+main {
+    position: relative;
+    /* height: calc(965px - 176px); */
+    background: lightblue;
 }
