--- a/멜론클론/css/main.css
+++ b/멜론클론/css/main.css
@@ -7,6 +7,7 @@ body {
     align-items: center; */
     width: 1008px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 
 /* header */
@@ -127,53 +128,80 @@ a:visited {
     padding-top: 10px;
 }
 
-.header2_right2 {
-    display: inline-block;
-    width: 160px;
+
+.live {
+    display: block;
+    width: 150px;
     height: 20px;
     float: right;
     align-items: center;
-    margin-right: 275px;
-    margin: -20px 275px;
+    margin: -19px 0px;
+    margin-right: 285px; 
     cursor: pointer;
-    border: 1px solid #666;
+    border: none;
     box-sizing: border-box;
-    
 }
 
-.header2_right2:hover {
+.live:hover {
     display: none;
 }
 
 .chart {
     display: none;
-    width: 160px;
-    height: 80px;
+    width: 150px;
+    height: 300px;
+    float: right;
+    margin: -20px 0;
     margin-right: 275px;
-    margin: -20px 275px;
-    cursor: pointer;
     box-sizing: border-box;
+    background-color: #00d344;
 }
 
-.header2_right2:hover > .chart ul li{
+.chartlist {
+    display: none;
+    width: 150px;
+    height: 300px;
+    float: right;
     position: absolute;
-    display: block;
+    margin: -20px 0;
+    margin-right: 275px;
+    box-sizing: border-box;
+    background-color: #00d344;
 }
+
+.live:hover .chart {
+    display: block;
+    width: 150px;
+    height: 300px;
+    float: right;
+    margin: -20px 0;
+    position: absolute;
+    box-sizing: border-box;
+    background-color: #00d344;
+
+}
+
 
 
 /* 슬라이드 차트에 마우스 갖다대면 슬라이드 차트 사라지고 급상승 1위부터 10위까지 보이는(chart) 표 보이게 하기 */
+
+
+
 
 /* 광고배너 만들기 (사진삽입) */
 .header2_right3 {
     width: 275px;
     height: 75px;
+    position: relative;
     float: right;
-    margin-top: -50px;
-    border: 1px solid #e0e0e0;
+    margin-top: -45px;
     background-color: #fbfbfb;
-    box-sizing: border-box;
+    box-sizing: border-box;  
 }
 
+.header2_right3:hover {
+    cursor: pointer;
+}
 
 
 .header3 {
@@ -299,16 +327,67 @@ main {
 .albumwrap {
     width: 475px;
     height: 325px;
-    background-color: #00d344;
+    /* background-color: #00d344; */
     margin-top: 10px;
 }
 
-.albumlist ul li {
-    display: block;
-    height: 155px;
-    width: 155px;
+.albumlist ul {
+    font-size: 0;
 }
 
+.albumlist ul > li {
+    display: block;
+    height: 50%;
+    width: 33.3%;
+    padding: 0 3px;
+}
+
+
+
+.albumlist ul > li > img {
+    position: relative;
+    overflow: hidden;
+    padding: 0 0;
+}
+
+.albumlist ul > li > a .album .albumtop {
+    position: absolute;
+    bottom: 150%;
+    left: 30px;
+    z-index: 2;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 500;
+    padding: 0 5px;
+}
+
+.albumlist ul > li > a .album .albumbuttom {
+    position: absolute;
+    bottom: 150%;
+    left: 30px;
+    z-index: 2;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 500;
+    padding: 0 5px;
+}
+
+.albumlist ul > li > a .album::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+    z-index: 1;
+    opacity: 0;
+}
+
+.albumlist ul > li > a:hover .album::after {
+    opacity: 1;
+}
 
 .promotion {
     position: relative;
@@ -397,6 +476,7 @@ main {
     margin-top: 10px;
     border: 1px solid #e0e0e0;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 
